@@ -1,3 +1,8 @@
+2013-07-26  Tassilo Horn  <tsdh@gnu.org>
+
+	* gnus-sum.el (gnus-sort-threads-recursively): New defcustom.
+	(gnus-sort-threads): Use it.
+
 2013-07-25  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* gnus-art.el (gnus-button-url-regexp): Make it match url in which
